# task-manager

./: .env  app.py  create_table.py  pyproject.toml  readme.md  requirements.txt  setup.sh  task
doro/: __init__.py  args_parser.py  mydb.db  utils.py
doro/constants/: __init__.py
doro/database/: __init__.py  db_handler.py
doro/models/: __init__.py  model.py
doro/service/: __init__.py  handler.py
